<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b1"
    tools:context=".CompanyInfo">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="624dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                card_view:cardBackgroundColor="#fff"
                card_view:cardCornerRadius="8dp"
                card_view:cardElevation="8dp">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <ImageView
                        android:id="@+id/i1"
                        android:layout_width="1500dp"
                        android:layout_height="100dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="2dp"
                        android:adjustViewBounds="false"
                        android:background="@drawable/bghome"
                        android:cropToPadding="true"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="5dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/goldman_1"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/t1"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_below="@+id/i1"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="-2dp"
                        android:layout_marginBottom="2dp"
                        android:background="@drawable/bghome"
                        android:paddingLeft="5dp"
                        android:paddingTop="2dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="2dp"
                        android:text="@string/goldstr"
                        android:textStyle="bold" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                card_view:cardBackgroundColor="#fff"
                card_view:cardCornerRadius="8dp"
                card_view:cardElevation="8dp">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <ImageView
                        android:id="@+id/i2"
                        android:layout_width="1500dp"
                        android:layout_height="100dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginBottom="2dp"
                        android:adjustViewBounds="false"
                        android:background="@drawable/bghome"
                        android:cropToPadding="false"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="5dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/microsoft"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/t2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/i2"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="-2dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginBottom="2dp"
                        android:background="@drawable/bghome"
                        android:paddingLeft="5dp"
                        android:paddingTop="10dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="10dp"
                        android:text="Since 1975, Microsoft has built itself into the most prolific software company in the world. As creators of the ubiquitous Windows operating system and its suite of Office applications."
                        android:textStyle="bold" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                card_view:cardBackgroundColor="#fff"
                card_view:cardCornerRadius="8dp"
                card_view:cardElevation="8dp">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <ImageView
                        android:id="@+id/i3"
                        android:layout_width="1500dp"
                        android:layout_height="100dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="2dp"
                        android:adjustViewBounds="false"
                        android:background="@drawable/bghome"
                        android:cropToPadding="true"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="5dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/jpmc"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/t3"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_below="@+id/i3"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginBottom="2dp"
                        android:background="@drawable/bghome"
                        android:paddingLeft="5dp"
                        android:paddingTop="2dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="2dp"
                        android:text="@string/jpmc"
                        android:textStyle="bold" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                card_view:cardBackgroundColor="#fff"
                card_view:cardCornerRadius="8dp"
                card_view:cardElevation="8dp">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <ImageView
                        android:id="@+id/i4"
                        android:layout_width="1500dp"
                        android:layout_height="100dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginBottom="2dp"
                        android:adjustViewBounds="false"
                        android:background="@drawable/bghome"
                        android:cropToPadding="true"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="5dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/amazon"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/t4"
                        android:layout_width="342dp"
                        android:layout_height="89dp"
                        android:layout_below="@+id/i4"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="-1dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginBottom="2dp"
                        android:background="@drawable/bghome"
                        android:paddingLeft="5dp"
                        android:paddingTop="2dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="2dp"
                        android:text="@string/amazons"
                        android:textStyle="bold" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                card_view:cardBackgroundColor="#fff"
                card_view:cardCornerRadius="8dp"
                card_view:cardElevation="8dp">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <ImageView
                        android:id="@+id/i5"
                        android:layout_width="1500dp"
                        android:layout_height="100dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginBottom="2dp"
                        android:adjustViewBounds="false"
                        android:background="@drawable/bghome"
                        android:cropToPadding="true"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="5dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/samsung"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/t5"
                        android:layout_width="345dp"
                        android:layout_height="95dp"
                        android:layout_below="@+id/i5"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginBottom="2dp"
                        android:background="@drawable/bghome"
                        android:paddingLeft="5dp"
                        android:paddingTop="2dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="2dp"
                        android:text="@string/samsungs"
                        android:textStyle="bold" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>